RESOLVED FIXED225535
[JSC] Error#cause must recognize explicit undefined
https://bugs.webkit.org/show_bug.cgi?id=225535
Summary [JSC] Error#cause must recognize explicit undefined
Attachments
Patch (9.44 KB, patch)
2021-05-07 16:26 PDT, Ross Kirsling
no flags
Patch for landing (9.66 KB, patch)
2021-05-07 17:10 PDT, Ross Kirsling
no flags
Ross Kirsling
Comment 1 2021-05-07 16:26:29 PDT
Alexey Shvayka
Comment 2 2021-05-07 16:47:00 PDT
Comment on attachment 428057 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=428057&action=review Nice clean-up! r=me with a thought on (micro) optimization. > Source/JavaScriptCore/runtime/ErrorInstance.cpp:145 > + JSValue cause = object->get(globalObject, vm.propertyNames->cause); We could use slot.isTaintedByOpaqueObject() to avoid this get() if it's non-observable, like we do in objectConstructorValues() and friends.
Ross Kirsling
Comment 3 2021-05-07 17:03:27 PDT
(In reply to Alexey Shvayka from comment #2) > Comment on attachment 428057 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=428057&action=review > > Nice clean-up! r=me with a thought on (micro) optimization. > > > Source/JavaScriptCore/runtime/ErrorInstance.cpp:145 > > + JSValue cause = object->get(globalObject, vm.propertyNames->cause); > > We could use slot.isTaintedByOpaqueObject() to avoid this get() if it's > non-observable, like we do in objectConstructorValues() and friends. Thanks, will do!
Ross Kirsling
Comment 4 2021-05-07 17:10:38 PDT
Created attachment 428063 [details] Patch for landing
EWS
Comment 5 2021-05-07 18:26:39 PDT
Committed r277221 (237492@main): <https://commits.webkit.org/237492@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 428063 [details].
Radar WebKit Bug Importer
Comment 6 2021-05-07 18:27:16 PDT
Truitt Savell
Comment 7 2021-05-14 12:22:31 PDT
Note You need to log in before you can comment on or make changes to this bug.